[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inauconf"
version = "1.2.1"
authors = [
  { name="Ndjieudja'dja Gabriel", email="gabrielndjieudja@gmail.com" },
]
description = "A simple script to code type text input and file_read"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ndjieudja/inauconf"
"Bug Tracker" = "https://github.com/ndjieudja/inauconf/issues"

[tool.hatch.build.targets.sdist]
include = ["/library"]

[tool.hatch.build.targets.wheel]
packages = ["library"]